navbar on mobile is no longer transparent; bigger logo

--- a/styles/about.css
+++ b/styles/about.css
@@ -69,6 +69,8 @@ h1 {
 .person-container div img {
   display: block;
   margin: auto auto;
+  aspect-ratio: 3/4;
+  object-fit: cover;
   width: 13em;
   border: 2px solid black;
   border-radius: 5px;
